third_party/llvm-project/clang/test/Modules/Inputs/shadowed-submodule/A1/Foo.h
#include <stdarg.h> // expected-error {{could not build module 'A'}}
